--- a/docsite/components/badge.html
+++ b/docsite/components/badge.html
@@ -11,7 +11,7 @@
 <body>
     <header class="shadow-box navbar">
         <div class="first-col">
-            <h1 class="hero-font  margin-md title text-vibrant shadow-text">Beads
+            <h1 class="hero-font  margin-md title text-primary shadow-text">Beads
                  <span class="text-primary margin-none">UI</span></h1>
         </div>
     
@@ -29,24 +29,24 @@
     <aside>
         <h1 class="padding-xs">Getting Started</h1>
         <ul class="mb-lg padding-xs style-list-none">
-            <li class="padding-xs font3"><a class="decor-none aside-link text-vibrant" href="../docs.html">Installation</a></li>
+            <li class="padding-xs font3"><a class="decor-none aside-link text-primary" href="../docs.html">Installation</a></li>
         </ul>
         <h1 class="padding-xs">Documentation</h1>
         <ul class="mb-lg padding-xs style-list-none">
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant"  href="avatar.html">Avatar</a> </li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant " href="alert.html">Alert</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant active" href="badge.html">Badge</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="button.html">Button</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="card.html">Card</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="image.html">Image</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="input.html">Input</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="textutil.html">Text Util</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="list.html">List</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="navigation.html">Navigation</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="modal.html">Modal</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="rating.html">Rating</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="toast.html">Toast</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="grid.html">Grid</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary"  href="avatar.html">Avatar</a> </li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary " href="alert.html">Alert</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary active" href="badge.html">Badge</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="button.html">Button</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="card.html">Card</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="image.html">Image</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="input.html">Input</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="textutil.html">Text Util</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="list.html">List</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="navigation.html">Navigation</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="modal.html">Modal</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="rating.html">Rating</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="toast.html">Toast</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="grid.html">Grid</a></li>
     </ul></aside>
     <main>
         <div class="content-wrapper">
@@ -81,20 +81,25 @@
         <div class="section">
             <h2 class="mb-lg">Badge on icon</h2>
             <div class="centered shadow-box margin-md padding-y">
-            <div class="avatar avatar-badge margin-md text-primary"><i class="fas fa-2x fa-cart-plus cart "> </i>
+            <div class="avatar avatar-badge text-primary"><i class="fas fa-lg fa-shopping-cart cart "> </i>
+                <div class="status-circle icon-top-badge-sm bg-red">4</div>  
+            </div>
+        
+            <div class="avatar avatar-badge margin-md text-primary"><i class="fas fa-2x fa-shopping-cart cart "> </i>
                 <div class="status-circle icon-top-badge bg-green">4</div>  
             </div>
         
-            <div class="avatar avatar-badge "><i class="fas fa-3x fa-envelope cart text-vibrant"> </i>
+            <div class="avatar avatar-badge "><i class="fas fa-3x fa-envelope cart text-primary"> </i>
                 <div class="status-circle icon-top-badge bg-red">4</div>  
                 </div>
             </div>
             <div class="iframe-wrapper">
                 <iframe
-  src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%253Cdiv%2520class%253D%2522avatar%2520avatar-badge%2520text-primary%2522%253E%253Ci%2520class%253D%2522fas%2520fa-2x%2520fa-cart-plus%2520cart%2520%2522%253E%2520%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522status-circle%2520icon-top-badge%2520bg-green%2522%253E4%253C%252Fdiv%253E%2520%2520%250A%2520%253C%252Fdiv%253E%250A%250A%2520%253Cdiv%2520class%253D%2522avatar%2520avatar-badge%2520%2522%253E%253Ci%2520class%253D%2522fas%2520fa-3x%2520fa-envelope%2520cart%2520text-vibrant%2522%253E%2520%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2509%253Cdiv%2520class%253D%2522status-circle%2520icon-top-badge%2520bg-red%2522%253E4%253C%252Fdiv%253E%2520%2520%250A%2520%253C%252Fdiv%253E"
- 
-  sandbox="allow-scripts allow-same-origin">
-</iframe>
+                src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522avatar%2520avatar-badge%2520text-primary%2522%253E%253Ci%2520class%253D%2522fas%2520fa-lg%2520fa-shopping-cart%2520cart%2520%2522%253E%2520%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522status-circle%2520icon-top-badge-sm%2520bg-red%2522%253E4%253C%252Fdiv%253E%2520%2520%250A%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%250A%253Cdiv%2520class%253D%2522avatar%2520avatar-badge%2520margin-md%2520text-primary%2522%253E%253Ci%2520class%253D%2522fas%2520fa-2x%2520fa-shopping-cart%2520cart%2520%2522%253E%2520%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522status-circle%2520icon-top-badge%2520bg-green%2522%253E4%253C%252Fdiv%253E%2520%2520%250A%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%250A%253Cdiv%2520class%253D%2522avatar%2520avatar-badge%2520%2522%253E%253Ci%2520class%253D%2522fas%2520fa-3x%2520fa-envelope%2520cart%2520text-primary%2522%253E%2520%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522status-circle%2520icon-top-badge%2520bg-red%2522%253E4%253C%252Fdiv%253E%2520%2520%250A%253C%252Fdiv%253E%250A"
+                class = "iframe-lg"
+                sandbox="allow-scripts allow-same-origin">
+               
+              </iframe>
             </div>
         </div>
          
@@ -102,8 +107,8 @@
     </main>
     
     <footer class="centered vertical-direction bg-secondary">
-        <button class="prev-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-vibrant" href="alert.html"><i class="fa fa-arrow-left "></i> Alert </a></button>
-        <button class="next-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-vibrant" href="button.html">Button <i class="fa fa-arrow-right "></i> </a></button>
+        <button class="prev-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="alert.html"><i class="fa fa-arrow-left "></i> Alert </a></button>
+        <button class="next-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="button.html">Button <i class="fa fa-arrow-right "></i> </a></button>
        
 
         <h2 class=" mb-lg ">Build with <span class="text-primary">&lt;/&gt;</span> by Kajal Kumari</h2>
