--- a/docsite/components/button.html
+++ b/docsite/components/button.html
@@ -11,7 +11,7 @@
 <body>
     <header class="shadow-box navbar">
         <div class="first-col">
-            <h1 class="hero-font  margin-md title text-vibrant shadow-text">Beads
+            <h1 class="hero-font  margin-md title text-primary shadow-text">Beads
                  <span class="text-primary margin-none">UI</span></h1>
         </div>
     
@@ -29,24 +29,24 @@
     <aside>
         <h1 class="padding-xs">Getting Started</h1>
         <ul class="mb-lg padding-xs style-list-none">
-            <li class="padding-xs font3"><a class="decor-none aside-link text-vibrant" href="../docs.html">Installation</a></li>
+            <li class="padding-xs font3"><a class="decor-none aside-link text-primary" href="../docs.html">Installation</a></li>
         </ul>
         <h1 class="padding-xs">Documentation</h1>
         <ul class="mb-lg padding-xs style-list-none">
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant"  href="avatar.html">Avatar</a> </li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="alert.html">Alert</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="badge.html">Badge</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant active" href="button.html">Button</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="card.html">Card</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="image.html">Image</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="input.html">Input</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="textutil.html">Text Utils</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="list.html">List</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="navigation.html">Navigations</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="modal.html">Modal</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="rating.html">Rating</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="toast.html">Toast</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="grid.html">Grid</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary"  href="avatar.html">Avatar</a> </li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="alert.html">Alert</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="badge.html">Badge</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary active" href="button.html">Button</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="card.html">Card</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="image.html">Image</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="input.html">Input</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="textutil.html">Text Utils</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="list.html">List</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="navigation.html">Navigations</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="modal.html">Modal</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="rating.html">Rating</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="toast.html">Toast</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="grid.html">Grid</a></li>
     </ul></aside>
     <main>
         <div class="content-wrapper">
@@ -57,13 +57,13 @@
            <div class="section">
             <h2 class="mb-lg">Primary Button</h2>
             <div class="centered shadow-box margin-md padding-y">
-            <button class="rm-border bg-vibrant light-text  padding-xs font3 pointer margin-md">Documentation</button>
+            <button class="rm-border bg-primary light-text  padding-xs font3 pointer margin-md">Documentation</button>
             <button class="reset btn btn-outline  padding-sm margin-md font3 hover-secondary">Primary Button</button>
             </div>
 
             <div class="iframe-wrapper">
                 <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253C%21--Primary%2520button%2520and%2520primary%2520outline%2520button--%253E%250A%253Cbutton%2520class%253D%2522rm-border%2520bg-vibrant%2520light-text%2520%2520padding-xs%2520font3%2520pointer%2520margin-md%2522%253EDocumentation%253C%252Fbutton%253E%250A%253Cbutton%2520class%253D%2522reset%2520btn%2520btn-outline%2520%2520padding-sm%2520margin-md%2520font3%2520hover-secondary%2522%253EPrimary%2520Button%253C%252Fbutton%253E"
+                src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253C%21--Primary%2520button%2520and%2520primary%2520outline%2520button--%253E%250A%253Cbutton%2520class%253D%2522rm-border%2520bg-primary%2520light-text%2520%2520padding-xs%2520font3%2520pointer%2520margin-md%2522%253EDocumentation%253C%252Fbutton%253E%250A%253Cbutton%2520class%253D%2522reset%2520btn%2520btn-outline%2520%2520padding-sm%2520margin-md%2520font3%2520hover-secondary%2522%253EPrimary%2520Button%253C%252Fbutton%253E"
                 sandbox="allow-scripts allow-same-origin">
               </iframe>
             </div>
@@ -85,13 +85,13 @@
             <h2 class="mb-lg">Float Button</h2>
             <div class="centered shadow-box margin-md padding-y">
             <button class=" btn-transparent btn rm-border font2 float text-primary margin-md"> Alert <i class="fa fa-arrow-right "></i></button>
-            <button class="reset rm-border bg-vibrant border-round light-text float margin-md">
+            <button class="reset rm-border bg-primary border-round light-text float margin-md">
                 <i class="fa fa-arrow-up evenly-padding-sm font3"></i>
             </button>
             </div>
             <div class="iframe-wrapper">
                 <iframe
-  src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253C%21--Floating%2520buttons--%253E%250A%253Cbutton%2520class%253D%2522%2520btn-transparent%2520btn%2520rm-border%2520font2%2520float%2520text-primary%2520margin-md%2522%253E%2520Alert%2520%253Ci%2520class%253D%2522fa%2520fa-arrow-right%2520%2522%253E%253C%252Fi%253E%253C%252Fbutton%253E%250A%253Cbutton%2520class%253D%2522reset%2520rm-border%2520bg-vibrant%2520border-round%2520light-text%2520float%2520margin-md%2522%253E%250A%253Ci%2520class%253D%2522fa%2520fa-arrow-up%2520evenly-padding-sm%2520font3%2522%253E%253C%252Fi%253E%250A%253C%252Fbutton%253E"
+  src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253C%21--Floating%2520buttons--%253E%250A%253Cbutton%2520class%253D%2522%2520btn-transparent%2520btn%2520rm-border%2520font2%2520float%2520text-primary%2520margin-md%2522%253E%2520Alert%2520%253Ci%2520class%253D%2522fa%2520fa-arrow-right%2520%2522%253E%253C%252Fi%253E%253C%252Fbutton%253E%250A%253Cbutton%2520class%253D%2522reset%2520rm-border%2520bg-primary%2520border-round%2520light-text%2520float%2520margin-md%2522%253E%250A%253Ci%2520class%253D%2522fa%2520fa-arrow-up%2520evenly-padding-sm%2520font3%2522%253E%253C%252Fi%253E%250A%253C%252Fbutton%253E"
   
   sandbox="allow-scripts allow-same-origin">
 </iframe>
@@ -102,12 +102,12 @@
             <h2 class="mb-lg">Link and Icon Button</h2>
             <div class="centered shadow-box margin-md padding-y">
             <button class="reset rm-border margin-md font2 pointer btn-transparent hover-primary border-bottom">Home</button>
-            <button class="reset btn-transparent rm-border margin-md"><i class="fas fa-3x fa-cart-plus text-vibrant"> </i>
+            <button class="reset btn-transparent rm-border margin-md"><i class="fas fa-3x fa-cart-plus text-primary"> </i>
             </button>
             </div>
             <div class="iframe-wrapper">
                 <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253C%21-Link%2520and%2520Icon%2520buttons--%253E%250A%2520%253Cbutton%2520class%253D%2522reset%2520rm-border%2520margin-md%2520font2%2520pointer%2520btn-transparent%2520hover-primary%2520border-bottom%2522%253EHome%253C%252Fbutton%253E%250A%2520%253Cbutton%2520class%253D%2522reset%2520btn-transparent%2520rm-border%2522%253E%253Ci%2520class%253D%2522fas%2520fa-3x%2520fa-cart-plus%2520text-vibrant%2522%253E%2520%253C%252Fi%253E%250A%2520%253C%252Fbutton%253E"
+                src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253C%21-Link%2520and%2520Icon%2520buttons--%253E%250A%2520%253Cbutton%2520class%253D%2522reset%2520rm-border%2520margin-md%2520font2%2520pointer%2520btn-transparent%2520hover-primary%2520border-bottom%2522%253EHome%253C%252Fbutton%253E%250A%2520%253Cbutton%2520class%253D%2522reset%2520btn-transparent%2520rm-border%2522%253E%253Ci%2520class%253D%2522fas%2520fa-3x%2520fa-cart-plus%2520text-primary%2522%253E%2520%253C%252Fi%253E%250A%2520%253C%252Fbutton%253E"
                
                 sandbox="allow-scripts allow-same-origin">
               </iframe>
@@ -118,8 +118,8 @@
     </main>
     
     <footer class="centered vertical-direction bg-secondary">
-        <button class="prev-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-vibrant" href="badge.html"><i class="fa fa-arrow-left "></i> Badge </a></button>
-        <button class="next-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-vibrant" href="card.html">Card <i class="fa fa-arrow-right "></i> </a></button>
+        <button class="prev-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="badge.html"><i class="fa fa-arrow-left "></i> Badge </a></button>
+        <button class="next-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="card.html">Card <i class="fa fa-arrow-right "></i> </a></button>
        
 
         <h2 class=" mb-lg ">Build with <span class="text-primary">&lt;/&gt;</span> by Kajal Kumari</h2>
