--- a/css/root.css
+++ b/css/root.css
@@ -7,12 +7,11 @@
 }
 html{
     scroll-behavior: smooth;
-    font-family: 'Source Serif 4', sans-serif;;
+    font-family: 'Open Sans', sans-serif;
 }
 :root{
-     --primary-color:#FCB08C;
+    --primary-color:#800080;
     --secondary-color:#260827;
-    --vibrant:rgb(128, 0, 128);
     --bg-secondary: #f7f7f7;
     --text-color:#000;
     --text-light:white;
