--- a/css/typography.css
+++ b/css/typography.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Source+Serif+4&display=swap');
 
 .hero-font{
-    font-family: 'Source Serif 4', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .font1{
