--- a/docsite/components/card.html
+++ b/docsite/components/card.html
@@ -11,7 +11,7 @@
 <body>
     <header class="shadow-box navbar">
         <div class="first-col">
-            <h1 class="hero-font  margin-md title text-vibrant shadow-text">Beads
+            <h1 class="hero-font  margin-md title text-primary shadow-text">Beads
                  <span class="text-primary margin-none">UI</span></h1>
         </div>
     
@@ -29,24 +29,24 @@
     <aside>
         <h1 class="padding-xs">Getting Started</h1>
         <ul class="mb-lg padding-xs style-list-none">
-            <li class=" padding-xs font3"><a class="decor-none aside-link text-vibrant" href="../docs.html">Installation</a></li>
+            <li class=" padding-xs font3"><a class="decor-none aside-link text-primary" href="../docs.html">Installation</a></li>
         </ul>
         <h1 class="padding-xs">Documentation</h1>
         <ul class="mb-lg padding-xs style-list-none">
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant"  href="avatar.html">Avatar</a> </li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="alert.html">Alert</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="badge.html">Badge</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant " href="button.html">Button</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant active" href="card.html">Card</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="image.html">Image</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="input.html">Input</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="textutil.html">Text Utils</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="list.html">List</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="navigation.html">Navigation</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="modal.html">Modal</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="rating.html">Rating</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="toast.html">Toast</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="grid.html">Grid</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary"  href="avatar.html">Avatar</a> </li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="alert.html">Alert</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="badge.html">Badge</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary " href="button.html">Button</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary active" href="card.html">Card</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="image.html">Image</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="input.html">Input</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="textutil.html">Text Utils</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="list.html">List</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="navigation.html">Navigation</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="modal.html">Modal</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="rating.html">Rating</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="toast.html">Toast</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="grid.html">Grid</a></li>
     </ul></aside>
     <main>
         <div class="content-wrapper">
@@ -138,7 +138,6 @@
             <div class="iframe-wrapper">
                 <iframe
                 src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253C%21--Card%2520with%2520Dismiss--%253E%250A%2520%2520%253Cdiv%2520class%253D%2522card%2520simple-card%2520reset%2520card-dismiss%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522..%252Fassets%252Fitem2.jpg%2522%2520alt%253D%2522product%2522%2520class%253D%2522card-img%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520rm-border%2520btn-transparent%2520font2%2520dismiss-card-btn%2520reset%2522%253EX%253C%252Fbutton%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522card-textarea%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522left-pane%2520evenly-padding-sm%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch2%2520class%253D%2522card-heading%2520%2522%253EBasket%253C%252Fh2%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522text-secondary%2522%253EEnvironment%2520friendly%2520basket%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522stars%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522text-primary%2520font3%2522%253E%25E2%2582%25B9199%2520only%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-heart%2520fa-lg%2520%2520card-icon%2520evenly-padding-sm%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E"
-                class="iframe-lg"
                 sandbox="allow-scripts allow-same-origin">
               </iframe>
             </div>
@@ -159,7 +158,7 @@
     
             <div class="card mb-lg overlay-card margin-md reset">
                 <img src="../../assets/item2.jpg" alt="" class="card-img-overlay">
-                <div class="overlay-card-content text-vibrant">
+                <div class="overlay-card-content text-primary">
                     <h1 class="font2 card-heading">Baskets</h1>
                     <p >Environment friendly basket</p>
                     <div class="stars">
@@ -195,7 +194,7 @@
             </div>
             <div class="iframe-wrapper">
                 <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253C%21--Card%2520with%2520Text%2520Overlay--%253E%250A%2520%2520%2520%253Cdiv%2520class%253D%2522card%2520mb-lg%2520overlay-card%2520margin-md%2520reset%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522..%252Fassets%252Fitem2.jpg%2522%2520alt%253D%2522%2522%2520class%253D%2522card-img-overlay%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522overlay-card-content%2520text-vibrant%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch1%2520class%253D%2522font2%2520card-heading%2522%253EBaskets%253C%252Fh1%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520%253EEnvironment%2520friendly%2520basket%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522stars%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522%2520font3%2522%253E%25E2%2582%25B9199%2520only%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522bottom-overlayed-icon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-heart%2520fa-lg%2520card-icon%2520%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522top-overlayed-icon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522fas%2520fa-lg%2520fa-cart-plus%2520cart%2520card-icon%2522%253E%2520%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E"
+                src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253C%21--Card%2520with%2520Text%2520Overlay--%253E%250A%2520%2520%2520%253Cdiv%2520class%253D%2522card%2520mb-lg%2520overlay-card%2520margin-md%2520reset%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522..%252Fassets%252Fitem2.jpg%2522%2520alt%253D%2522%2522%2520class%253D%2522card-img-overlay%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522overlay-card-content%2520text-primary%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch1%2520class%253D%2522font2%2520card-heading%2522%253EBaskets%253C%252Fh1%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520%253EEnvironment%2520friendly%2520basket%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522stars%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522%2520font3%2522%253E%25E2%2582%25B9199%2520only%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522bottom-overlayed-icon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522far%2520fa-heart%2520fa-lg%2520card-icon%2520%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522top-overlayed-icon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522fas%2520fa-lg%2520fa-cart-plus%2520cart%2520card-icon%2522%253E%2520%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E"
                 class="iframe-lg"
                 sandbox="allow-scripts allow-same-origin">
               </iframe>
@@ -288,8 +287,8 @@
     </main>
     
     <footer class="centered vertical-direction bg-secondary">
-        <button class="prev-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-vibrant" href="button.html"><i class="fa fa-arrow-left "></i> Button </a></button>
-        <button class="next-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-vibrant" href="image.html">Image <i class="fa fa-arrow-right "></i> </a></button>
+        <button class="prev-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="button.html"><i class="fa fa-arrow-left "></i> Button </a></button>
+        <button class="next-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="image.html">Image <i class="fa fa-arrow-right "></i> </a></button>
        
 
         <h2 class=" mb-lg ">Build with <span class="text-primary">&lt;/&gt;</span> by Kajal Kumari</h2>
