--- a/docsite/components/rating.html
+++ b/docsite/components/rating.html
@@ -11,7 +11,7 @@
 <body>
     <header class="shadow-box navbar">
         <div class="first-col">
-            <h1 class="hero-font  margin-md title text-vibrant shadow-text">Beads
+            <h1 class="hero-font  margin-md title text-primary shadow-text">Beads
                  <span class="text-primary margin-none">UI</span></h1>
         </div>
     
@@ -29,24 +29,24 @@
     <aside>
         <h1 class="padding-xs">Getting Started</h1>
         <ul class="mb-lg padding-xs style-list-none">
-            <li class="padding-xs font3"><a class="decor-none aside-link text-vibrant" href="../docs.html">Installation</a></li>
+            <li class="padding-xs font3"><a class="decor-none aside-link text-primary" href="../docs.html">Installation</a></li>
         </ul>
         <h1 class="padding-xs">Documentation</h1>
         <ul class="mb-lg padding-xs style-list-none">
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant"  href="avatar.html">Avatar</a> </li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="alert.html">Alert</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="badge.html">Badge</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="button.html">Button</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="card.html">Card</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="image.html">Image</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="input.html">Input</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="textutil.html">Text Utils</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="list.html">List</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="navigation.html">Navigation</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="modal.html">Modal</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant active" href="rating.html">Rating</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="toast.html">Toast</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="grid.html">Grid</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary"  href="avatar.html">Avatar</a> </li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="alert.html">Alert</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="badge.html">Badge</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="button.html">Button</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="card.html">Card</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="image.html">Image</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-primary" href="input.html">Input</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="textutil.html">Text Utils</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="list.html">List</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="navigation.html">Navigation</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="modal.html">Modal</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary active" href="rating.html">Rating</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="toast.html">Toast</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="grid.html">Grid</a></li>
     </ul></aside>
     <main>
         <div class="content-wrapper">
@@ -58,7 +58,7 @@
                 <h2 class="mb-lg">Simple Rating</h2>
                 <div class="centered shadow-box margin-md padding-y vertical-direction"> 
                     <h3 class="mb-lg">Rate This Product</h3>
-                    <div class="ratings shadow-box padding-xs text-vibrant">
+                    <div class="ratings shadow-box padding-xs text-primary">
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
@@ -69,7 +69,7 @@
             </div>
                 <div class="iframe-wrapper">
                     <iframe
-  src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2509%2509%253Ch3%2520class%253D%2522mb-lg%2522%253ERate%2520This%2520Product%253C%252Fh3%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2509%2509%253Cdiv%2520class%253D%2522ratings%2520shadow-box%2520padding-xs%2520text-vibrant%2522%253E%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522fa%2520fa-star%2520checked%2522%253E%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522fa%2520fa-star%2520checked%2522%253E%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522fa%2520fa-star%2520checked%2522%253E%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522fa%2520fa-star%2522%253E%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2509%2520%2509%253C%252Fdiv%253E"
+  src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2509%2509%253Ch3%2520class%253D%2522mb-lg%2522%253ERate%2520This%2520Product%253C%252Fh3%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2509%2509%253Cdiv%2520class%253D%2522ratings%2520shadow-box%2520padding-xs%2520text-primary%2522%253E%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522fa%2520fa-star%2520checked%2522%253E%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522fa%2520fa-star%2520checked%2522%253E%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522fa%2520fa-star%2520checked%2522%253E%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522fa%2520fa-star%2522%253E%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2509%2520%2509%253C%252Fdiv%253E"
   sandbox="allow-scripts allow-same-origin">
 </iframe>
                 </div>
@@ -80,8 +80,8 @@
     </main>
     
     <footer class="centered vertical-direction bg-secondary">
-        <button class="prev-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-vibrant" href="navigation.html"><i class="fa fa-arrow-left "></i> Navigation </a></button>
-        <button class="next-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-vibrant" href="rating.html">Rating <i class="fa fa-arrow-right "></i> </a></button>
+        <button class="prev-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="navigation.html"><i class="fa fa-arrow-left "></i> Navigation </a></button>
+        <button class="next-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="rating.html">Rating <i class="fa fa-arrow-right "></i> </a></button>
        
 
         <h2 class=" mb-lg ">Build with <span class="text-primary">&lt;/&gt;</span> by Kajal Kumari</h2>
